# soc2-compliance-ai-mcp

./: .cursorrules  .mcp.json  CODEOWNERS  Dockerfile  README.md  acp.json  actor.json  apify-actor.json  glama.json  llms.txt  mcp.json  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: ci.yml  codeql.yml  compliance-pdca.yml  mcp-smithery-publish.yml  pypi-publish.yml
.well-known/: agent.json  mcp-server  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_fuzz.py
